src/objects/SIS_Account_Status__mdt.object
<CustomObject>
    <fields>
        <fullName>Country_ISO_Codes__c</fullName>
        <description>List of Country ISO codes, comma separated</description>
        <inlineHelpText>Use commas to separate values, or use keyword &quot;All&quot; to select all countries</inlineHelpText>
        <label>Country ISO Codes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only records with this check enabled are used</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Class__c</fullName>
        <description>Account Location_Class value, comma separated</description>
        <inlineHelpText>Use commas to separate values</inlineHelpText>
        <label>Location Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>List of (account)Location Type values, comma separated</description>
        <inlineHelpText>Use commas to separate values</inlineHelpText>
        <label>Location Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordtype__c</fullName>
        <description>Developer name of the Account recordtype</description>
        <label>Recordtype Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Status__c</fullName>
        <description>Default value for field Account.SIS_Status__c</description>
        <label>SIS Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Substatus__c</fullName>
        <description>Default value for field Account.SIS_Sub_Status__c</description>
        <label>SIS Substatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account Status__c value</description>
        <inlineHelpText>Use commas to separate values</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SIS Account Status</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>Recordtype__c</columns>
        <columns>Country_ISO_Codes__c</columns>
        <columns>Status__c</columns>
        <columns>Location_Class__c</columns>
        <columns>Location_Type__c</columns>
        <columns>SIS_Status__c</columns>
        <columns>SIS_Substatus__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SIS Accounts Status</pluralLabel>
</CustomObject>